--- a/NewsApp/AddUpdateNewsVC/AddUpdateNewsVC.storyboard
+++ b/NewsApp/AddUpdateNewsVC/AddUpdateNewsVC.storyboard
@@ -35,7 +35,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evi-ho-hXE" customClass="UIButtonX" customModule="NewsApp" customModuleProvider="target">
                                         <rect key="frame" x="16" y="169" width="78" height="35"/>
-                                        <color key="backgroundColor" name="Blue"/>
+                                        <color key="backgroundColor" name="tealColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="F6A-DD-SZv"/>
                                             <constraint firstAttribute="width" constant="78" id="bBL-5K-SDO"/>
@@ -49,13 +49,13 @@
                                                 <real key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
-                                                <real key="value" value="0.5"/>
+                                                <real key="value" value="0.29999999999999999"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                                 <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                                <real key="value" value="3"/>
+                                                <real key="value" value="2"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                 <size key="value" width="0.40000000000000002" height="0.40000000000000002"/>
@@ -67,7 +67,7 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ULm-8M-osN" customClass="UIButtonX" customModule="NewsApp" customModuleProvider="target">
                                         <rect key="frame" x="257" y="169" width="78" height="35"/>
-                                        <color key="backgroundColor" name="Blue"/>
+                                        <color key="backgroundColor" name="tealColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="L64-ad-H1o"/>
                                             <constraint firstAttribute="width" constant="78" id="Scf-Ag-XRu"/>
@@ -81,13 +81,13 @@
                                                 <real key="value" value="10"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
-                                                <real key="value" value="0.5"/>
+                                                <real key="value" value="0.29999999999999999"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
                                                 <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
-                                                <real key="value" value="3"/>
+                                                <real key="value" value="2"/>
                                             </userDefinedRuntimeAttribute>
                                             <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
                                                 <size key="value" width="0.40000000000000002" height="0.40000000000000002"/>
@@ -180,11 +180,11 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="Blue">
-            <color red="0.043137254901960784" green="0.1803921568627451" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Orange">
             <color red="0.9882352941176471" green="0.23529411764705882" blue="0.23529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="tealColor">
+            <color red="0.035294117647058823" green="0.17647058823529413" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
