--- a/NewsApp/NewsVC/NewsCell/NewsCell.xib
+++ b/NewsApp/NewsVC/NewsCell/NewsCell.xib
@@ -9,6 +9,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Lobster-Regular.ttf">
+            <string>Lobster-Regular</string>
+        </array>
+        <array key="MedulaOne-Regular.ttf">
+            <string>MedulaOne-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,19 +31,19 @@
                         <rect key="frame" x="8" y="8" width="334" height="147.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xo-7G-8HQ">
-                                <rect key="frame" x="8" y="8" width="318" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <rect key="frame" x="8" y="8" width="318" height="31.5"/>
+                                <fontDescription key="fontDescription" name="Lobster-Regular" family="Lobster" pointSize="25"/>
                                 <color key="textColor" name="Orange"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTX-v7-Uep">
-                                <rect key="frame" x="8" y="52" width="318" height="87.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <rect key="frame" x="8" y="47.5" width="318" height="92"/>
+                                <fontDescription key="fontDescription" name="MedulaOne-Regular" family="Medula One" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="Blue"/>
+                        <color key="backgroundColor" red="0.035294117649999998" green="0.1764705882" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="PTX-v7-Uep" secondAttribute="bottom" constant="8" id="2n0-AV-hlm"/>
                             <constraint firstAttribute="trailing" secondItem="4xo-7G-8HQ" secondAttribute="trailing" constant="8" id="CwV-tE-l8m"/>
@@ -85,9 +93,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="Blue">
-            <color red="0.043137254901960784" green="0.1803921568627451" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Orange">
             <color red="0.9882352941176471" green="0.23529411764705882" blue="0.23529411764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
