--- a/NewsApp/ProfileVC/ProfileStoryboard.storyboard
+++ b/NewsApp/ProfileVC/ProfileStoryboard.storyboard
@@ -21,10 +21,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Profile Navigation Controller-->
         <scene sceneID="uBz-IE-Oey">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rxa-4T-zg3" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rxa-4T-zg3" customClass="ProfileNavigationController" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="JXQ-jr-GXd">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
